tests/spec/fail/slice_start_gt_end.aja
arr = [1, 2]
print(arr[2:1])
